# AI-Recruiter-Intelligence-Assistant

./: .gitignore  ARCHITECTURE.md  README.md  TinyLlama_Text2SQL_LoRA_FineTuning.ipynb  package-lock.json
backend/: .env.example  build_skill_cache.py  main.py  pyproject.toml  requirements.txt
backend/api/: chat.py  delete.py  github.py  match.py  search.py  session.py  upload.py
backend/chroma_db/: chroma.sqlite3
backend/data/: skill_aliases.json  skill_embeddings.pkl  skills.json
backend/services/: chunker.py  embedding_service.py  explainer.py  github_service.py  jd_skill_classifier.py  llm_service.py  matcher.py  parser.py  retriever.py  semantic_matcher.py  session_store.py  skill_embedding_cache.py  skill_gap_analyzer.py  skills.py  vector_store.py  weighted_skill_gap_analyzer.py
frontend/recruiter-ui/: package-lock.json  package.json
frontend/recruiter-ui/public/: index.html
frontend/recruiter-ui/src/: App.css  App.jsx  index.css  index.jsx
frontend/recruiter-ui/src/components/: BackendStatus.jsx  ChatSection.jsx  GithubSection.jsx  Loader.jsx  QuestionsPanel.jsx  QuestionsSection.jsx  ReportCard.jsx  ReportSection.jsx  ScoreCard.jsx  ScoreGauge.jsx  SkillTags.jsx  SkillsSection.jsx
frontend/recruiter-ui/src/hooks/: useBackendStatus.js
frontend/recruiter-ui/src/pages/: Dashboard.jsx  MainFlow.jsx  UploadPage.jsx
frontend/recruiter-ui/src/services/: api.js
frontend/recruiter-ui/src/utils/: pdfGenerator.js
